2004-11-05  Paolo Mantegazza  <mantegazza@aero.polimi.it>

	* rtai-core/ipc/sem/sem.c: recurred acquisition of RES_SEMs can now be 
	inferred from wait functions return

	* rtai-core/sched/rtai/sched_lxrt.c: hardened kernel threads exit,
	instead of just suspending themselves.

2004-10-25  Paolo Mantegazza  <mantegazza@aero.polimi.it>

	* rtai-core/malloc/malloc.c: fixed a memory leak when using kmalloc
	with more than one extension.

	* rtai-core/sched/rtai/sched_lxrt.c and rtai-core/netrpc/netrpc.c: 
	reinstalled a single mode to treat syscalls in hard mode.

2004-10-22  Paolo Mantegazza  <mantegazza@aero.polimi.it>

	* rtai-core/include/asm-i386/rtai_sched.h: macro init_fp_env 
	parametrised with a support fpu env, not necessarely the fpu
	task.

	* rtai-core/sched/rtai/all_schedulers.c: forced using the Linux real 
	time extension to support init_fp_env.

	* rtai-core/ipc/shm/shm.c: makes sure none frees the gloabl heap
	too soon, it must remain in schedulers hands.

	* rtai-core/malloc/malloc.c: release the memory allocated to the
	global heap. It was forgotten completely before.

2004-10-20  Gilles Chanteperdrix  <gilles.chanteperdrix@laposte.net>

	* rtai-core/ipc/fifos/fifos.c (rtf_create): Fix rtf_create
	documentation.

2004-10-13  Paolo Mantegazza  <mantegazza@aero.polimi.it>

	* rtai-core/arch/i386/hal/hal.c: changed to support a single entry
	point: for srq, lxrt, shm, from user space; added exported function
	to set up the idt table for immediate interrupt handling.

	* rtai-core/sched/rtai/sched_lxrt.c, sys_lxrt.c: hooked to the
	single entry point from user space available in rtai_hal.

	* rtai-core/include/asm-i386/rtai_hal.h: added definition of idt 
	table set/reset functions.

	* rtai-core/include/asm-i386/rtai_lxrt.h, rtai_vectors.h, 
	rtai_srq.h, cleaned to support a single entry point: for srq, 
	lxrt, shm, from user space.

2004-10-11  Paolo Mantegazza  <mantegazza@aero.polimi.it>
