@@ -429,7 +429,7 @@ if (rt_current->policy > 0) { \
 
 #define RR_SETYT() \
 if (new_task->policy > 0) { \
-	new_task->yield_time = rt_time_h + new_task->rr_remaining; \
+	new_task->yield_time = rt_times.tick_time + new_task->rr_remaining; \
 	global_policy = 1; \
 	if (new_task->yield_time < global_yield_time) { \
 		global_yield_time = new_task->yield_time; \
